--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <section >
-    <div class="d">
+    <div class="padding">
         <h2 class="my-4 text-center">ABOUT COMPONENT</h2>
         <div class="text-center ">
             <span class="me-3 spanComponent"></span>
